[package]
name = "image-conv"
version = "0.1.0"
authors = ["Gaurav Patel <GauravPatel97@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = "0.3.0"
image = "0.23.13"
prettytable-rs = "^0.8"