[package]
name = "image-conv"
version = "0.1.0"
authors = ["Gaurav Patel <GauravPatel97@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "High performance image convolution library."
categories = ["multimedia", "multimedia::images"]
readme = "./README.md"
repository = "https://github.com/gp-97/image-conv"
exclude = [
    "assets/*",
    "tests/test_assets/*"
]

[dependencies]
photon-rs = "0.3.0"
image = "0.23.13"
prettytable-rs = "^0.8"